emulate terminimal preview content structure

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,8 @@
 # The URL the site will be built for
 base_url = "https://nathanielmott.com"
+theme = "terminimal"
+generate_feed = true
+feed_filename = "rss.xml"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
@@ -14,3 +17,17 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
+accent_color = "pink"
+logo_text = "nathaniel_mott"
+page_titles = "main_only"
+
+menu_items = [
+    # each of these is optional, name and url are required
+    # $BASE_URL is going to be substituted by base_url from configuration
+    {name = "blog", url = "$BASE_URL"},
+
+    # tags should only be enabled if you have "tags" taxonomy
+    # see documentation below for more details
+    {name = "archive", url = "$BASE_URL/archive"},
+    {name = "about", url = "$BASE_URL/about"},
+    ]
